# prostoemenu_dev

./: .gitignore  Dockerfile  Prostoemenu_db_scheme_2023-03-01.drawio  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.prod.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy-back.yml  deploy-db.yml  deploy-front.yml  docker-app-deploy.yml  front-ci.yml
back/: .gitignore  Dockerfile  build_push_dockerhub.sh  db.sqlite3  manage.py  pyproject.toml  readme_back.md  requirements.txt
back/account/: admin.py  apps.py  models.py  permission.py  scripts.py  serializers.py  signals.py  tests.py  urls.py  user_credentials.txt  views.py
back/api/: models.py  serializers.py  urls.py  views.py
back/common/: models.py  pagination.py  utils.py  validators.py
back/data/: ingredient_cats.json  ingredients.json  measurements.json  recipe_categories.json  recipes.json
back/ingredient/: apps.py  serializers.py  urls.py  views.py
back/ingredients/: admin.py  apps.py  (+5 more)
front/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  docker-compose.yml  index.html  jsconfig.json  package-lock.json  package.json  readme_front.md  vite.config.js  vite.config.mjs
frontend/: front.md  package-lock.json  readme_front.md
infra/: .env  Dockerfile  Dockerfile.back  Dockerfile.front  Dockerfile2.back  docker-compose.back.yml  docker-compose.back2.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.front.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.front.conf
prostoemenu/: settings.py
(+538 files in other folders)
