[tool.poetry]
name = "prostoemenu-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prostoemenu_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.4"
black = "^23.7.0"
ruff = "^0.0.285"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
